Gradle files were added